--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bull": "^4.16.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
@@ -24,6 +25,7 @@
     "@babel/preset-env": "^7.25.9",
     "@babel/preset-typescript": "^7.25.9",
     "@jest/globals": "^29.7.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
